--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
         with:
