--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,7 +5,7 @@ on:
 
 
 jobs:
-  main:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
@@ -14,6 +14,25 @@ jobs:
       - uses: actions/checkout@v4
       - run: npm install
       - run: npm run lint
-      - run: npm run prettier
+#      - run: npm run prettier
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '15.x'
+      - uses: actions/checkout@v4
+      - run: npm install
       - run: CI=true npm run test
+  build:
+    runs-on: ubuntu-latest
+    needs:
+    - lint
+    - test
+    steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '15.x'
+      - uses: actions/checkout@v4
+      - run: npm install
       - run: npm run build
